<resources>
    <string name="app_name">Virtus SMS Module</string>
    <string name="select_version">Select Version</string>
    <string name="click_to_start">Tap a version then continue</string>
    <string name="version_lite">Lite</string>
    <string name="version_lite_desc">Basic floating menu</string>
    <string name="version_standard">Standard</string>
    <string name="version_standard_desc">Virtus standard module</string>
    <string name="version_pro">Professional</string>
    <string name="version_pro_desc">Full visual options</string>
    <string name="continue_text">Continue</string>
    <string name="deploy_title">Initializing</string>
    <string name="check_root_access">Check root access</string>
    <string name="decompress_resources">Decompress resources</string>
    <string name="obtain_overlay_permission">Obtain overlay permission</string>
    <string name="tips">Tips</string>
    <string name="okay">OK</string>
    <string name="root_fail">Root not found</string>
    <string name="overlay_fail">Grant overlay permission to use floating menu</string>
    <string name="device_info">Device Info</string>
    <string name="start_cheat">Start</string>
    <string name="exit_app">Exit</string>
    <string name="open_settings">Settings</string>
    <string name="load_driver">Load Driver / Core</string>
    <string name="stop_overlay">Stop floating menu</string>
    <string name="overlay_stopped">Floating menu stopped</string>
    <string name="selected_game">Selected: %1$s</string>
    <string name="select_game_first">Select game in settings</string>
    <string name="launch_failed">Could not launch game</string>
    <string name="game_launched_overlay_on">Game launched, overlay active</string>
    <string name="core_missing">Core file missing. Restart app.</string>
    <string name="core_missing_short">Core: missing</string>
    <string name="core_ready">Core: ready</string>
    <string name="cheat_already_running">Cheat core already running</string>
    <string name="settings_title">Settings</string>
    <string name="debug_mode">Debug mode</string>
    <string name="new_touch">New touch mode</string>
    <string name="gyroscope">Gyroscope loader</string>
    <string name="hide_esp">Hide ESP recording</string>
    <string name="enable_visual">Enable visual mode</string>
    <string name="enable_visual_on">Visual: ON</string>
    <string name="enable_visual_off">Visual: OFF</string>
    <string name="visual_enabled">Visual mode enabled</string>
    <string name="visual_disabled">Visual mode disabled</string>
    <string name="game_server_title">Game server</string>
    <string name="game_server_label">Game: %1$s</string>
    <string name="save_config">Save config</string>
    <string name="upload_config">Upload config to /data/local/tmp/</string>
    <string name="load_config">Load config from file</string>
    <string name="delete_core">Delete core file</string>
    <string name="config_saved">Config saved</string>
    <string name="config_uploaded">Config written to device</string>
    <string name="config_loaded">Config loaded</string>
    <string name="core_deleted">Core file deleted</string>
    <string name="menu_title">Virtus SMS Menu</string>
    <string name="visual_section">Visual</string>
    <string name="aim_section">Aim</string>
    <string name="esp_box">ESP Box</string>
    <string name="esp_line">ESP Line</string>
    <string name="esp_distance">ESP Distance</string>
    <string name="aim_assist">Aim Assist</string>
    <string name="recoil_control">Recoil Control</string>
    <string name="overlay_running">Floating menu is running</string>
</resources>
